# decky-wine-cellar

./: main.py  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/src/: github_util.rs  main.rs  multilogger.rs  steam_util.rs
backend/src/wine_cask/: app.rs  flavors.rs  install.rs  mod.rs  uninstall.rs  virtual_tools.rs
src/: types.ts
src/frontend/: flavorTab.tsx  index.tsx  manager.tsx
src/utils/: backendApi.ts  backendMessages.ts  toasts.ts
