[package]
name = "wine-cask"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging deps
log = { version = "0.4.29", features = ["std"] }
chrono = "0.4.44"
# Websocket deps
reqwest = { version = "0.13.2", default-features = false, features = ["stream", "blocking", "default-tls"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-channel = "0.3.32"
tokio = { version = "1.50.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
bytes = "1.11.1"
futures-util = "0.3.32"
# Parsing/Extracting deps
keyvalues-parser = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.45"
flate2 = "1.1.9"
xz2 = "0.1.7"
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
